unpackaged/main/default/objects/tspa__VRA_logs__c/tspa__VRA_logs__c.object-meta.xml
<CustomObject>
    <label>VRA logs</label>
    <nameField>
        <label>VRA logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VRA logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>