unpackaged/main/default/objects/tspa__VRA_logs__c/fields/tspa__Component__c.field-meta.xml
<CustomField>
    <fullName>tspa__Component__c</fullName>
    <label>Component</label>
    <length>25</length>
    <type>Text</type>
</CustomField>