unpackaged/main/default/objects/tspa__VRA_logs__c/fields/tspa__Endpoint__c.field-meta.xml
<CustomField>
    <fullName>tspa__Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>