unpackaged/main/default/objects/tspa__VRA_logs__c/fields/tspa__Message__c.field-meta.xml
<CustomField>
    <fullName>tspa__Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>