unpackaged/main/default/objects/tspa__VRA_logs__c/fields/tspa__Response_body__c.field-meta.xml
<CustomField>
    <fullName>tspa__Response_body__c</fullName>
    <label>Response body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>