unpackaged/main/default/objects/tspa__VRA_logs__c/listViews/tspa__All.listView-meta.xml
<ListView>
    <fullName>tspa__All</fullName>
    <columns>NAME</columns>
    <columns>tspa__Response_body__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>